# Co-Agent

./: README.md  app.py  google_ai_articles_debug.csv  pyproject.toml  web_crawler.py
co_agent/: agents.py  config.py  database.py  scraper.py
coagent_framework/Co-Agent/: app.py
linkedin_summarizer/: .env  __init__.py  agents.py  config.py  database.py  gcloud_auth.py
tests/: test_main.py
